✏️ Fix cover URL of a post

--- a/pages/blog/simple-script-cut-half-my-react-app-size.mdx
+++ b/pages/blog/simple-script-cut-half-my-react-app-size.mdx
@@ -4,7 +4,7 @@ description: >-
   Next.js website that cut its bundle size from 90kb to 50kb.
 tags: [react, javascript, webdev, nextjs]
 cover:
-  icons: [React, Next.js]
+  url: https://img.phuctm97.com/api/v2/Simple%20Script%20**Cut%20Half%20the%20Size**%20Of%20My%20React%20Website?icons=React&icons=Next.js
 date: 2021-01-12
 ---
 
