✏️ Fix blog typos

--- a/pages/blog/a-quick-exploration-with-deno.mdx
+++ b/pages/blog/a-quick-exploration-with-deno.mdx
@@ -1,5 +1,5 @@
 ---
-description:
+description: >-
   Deno v1 was released a couple of months ago with a lot of different opinions.
   Today, I decided to take a quick look into what it offers and what that
   potentially means.
