--- a/pages/blog/auto-shrink-header-on-scroll.mdx
+++ b/pages/blog/auto-shrink-header-on-scroll.mdx
@@ -1,5 +1,5 @@
 ---
-description:
+description: >-
   I've just implemented a feature to keep my header sticky and auto-shrink when
   users scroll to maximize readability and call to action.
 tags: [react, javascript, webdev, beginners]
