--- a/pages/blog/i-change-my-mind-abt-tailwind-css.mdx
+++ b/pages/blog/i-change-my-mind-abt-tailwind-css.mdx
@@ -1,5 +1,5 @@
 ---
-description:
+description: >-
   I tried TailwindCSS to add styles to my website but quit about an hour, then I
   tried again, it is awesome!
 tags: [css, react, javascript, webdev]
