--- a/pages/blog/mutable-options-problem.mdx
+++ b/pages/blog/mutable-options-problem.mdx
@@ -226,6 +226,10 @@ because it makes the flow crystal clear and intuitive, side effects make
 debugging very hard! When you can't avoid side effects, make sure to document
 and highlight it!
 
+In case you're curious about my website's implementation, it's open-source,
+[feel free to check it out][my repo]!
+
 [my website]: /
+[my repo]: https://github.com/phuctm97/phuctm97.com
 [mdx]: https://mdxjs.com
 [unified]: https://unifiedjs.com
