--- a/pages/blog/how-to-use-dependabot.mdx
+++ b/pages/blog/how-to-use-dependabot.mdx
@@ -37,7 +37,7 @@ To configure it, you need just a couple of lines of code:
 
 - Add some configuration to instruct Dependabot what to update:
 
-```yaml
+```yaml:dependabot.yml
 version: 2
 
 updates:
