--- a/pages/blog/make-copyable-code-block.mdx
+++ b/pages/blog/make-copyable-code-block.mdx
@@ -5,12 +5,12 @@ tags: [webdev, blog, react, javascript]
 
 # Make Copyable Code Block For Your Blog
 
-A couple of days ago I implemented a feature on allow viewers on [my website] to
+A couple of days ago I implemented a feature to allow viewers on [my website] to
 easily copy code blocks on my website. Personally, it is quite a useful feature
 for a technical blog.
 
-In this article, I'm going share how you can implement the same for your sites -
-applicable to all React-based sites.
+In this article, I'm going to share how you can implement the same for your
+sites - applicable to all React-based sites.
 
 ## `useCopyableRef` hook
 
@@ -47,7 +47,7 @@ It's simple, right?
 
 ## Usage in UI components
 
-`useCopyableRef` is similar to `useRef`, additionally it returns `isCopied` and
+`useCopyableRef` is similar to `useRef`, additionally, it returns `isCopied` and
 `copy` props, which you'd need to implement your UI components.
 
 Implementing your UI components can be as simple as the following example:
