--- a/pages/blog/make-copyable-code-block.mdx
+++ b/pages/blog/make-copyable-code-block.mdx
@@ -1,6 +1,8 @@
 ---
 date: 2021-01-31
 tags: [webdev, blog, react, javascript]
+cover:
+  icons: [React, Markdown]
 ---
 
 # Make Copyable Code Block For Your Blog
